--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.0",
     "react-markdown": "^10.1.0",
     "recharts": "^2.12.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.0"
   },
   "devDependencies": {
