--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "jspdf": "^4.1.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.427.0",
     "next": "^14.2.0",
     "next-auth": "^5.0.0-beta.30",
