--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^14.2.0",
     "next-auth": "^5.0.0-beta.30",
     "openai": "^6.10.0",
+    "pdf-parse": "^1.1.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-markdown": "^10.1.0",
