--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.427.0",
     "next": "^14.2.0",
     "next-auth": "^5.0.0-beta.30",
+    "next-intl": "^4.8.2",
     "openai": "^6.10.0",
     "pdf-parse": "^1.1.1",
     "react": "^18.3.0",
