--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^15.5.12",
     "next-auth": "^5.0.0-beta.30",
     "next-intl": "^4.8.2",
+    "ogl": "^1.0.11",
     "openai": "^6.10.0",
     "pdf-parse": "^1.1.1",
     "react": "^19.2.4",
