--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "postinstall": "prisma generate"
   },
   "dependencies": {
@@ -34,20 +36,36 @@
     "tailwind-merge": "^2.5.0"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^8.6.15",
+    "@storybook/addon-interactions": "^8.6.15",
+    "@storybook/addon-links": "^8.6.15",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/experimental-nextjs-vite": "^8.6.14",
+    "@storybook/nextjs": "^8.6.15",
+    "@storybook/react": "^8.6.15",
+    "@storybook/test": "^8.6.15",
     "@types/bcryptjs": "^3.0.0",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.14.0",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
+    "ajv": "^8.18.0",
+    "ajv-keywords": "^5.1.0",
     "autoprefixer": "^10.4.0",
     "better-sqlite3": "^12.5.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.5.12",
+    "eslint-plugin-storybook": "^0.12.0",
     "postcss": "^8.4.0",
     "prisma": "^5.19.0",
+    "storybook": "^8.6.15",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.21.0",
-    "typescript": "^5.5.0"
+    "typescript": "^5.5.0",
+    "webpack": "5.101.2"
+  },
+  "overrides": {
+    "webpack": "5.101.2"
   }
 }
